SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/EBiz_Object_Config__c.object-meta.xml
<CustomObject>
    <label>EBizCharge Object Config</label>
    <nameField>
        <label>EBiz Object Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge Object Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>