SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizAmountApi__c.field-meta.xml
<CustomField>
    <fullName>EBizAmountApi__c</fullName>
    <label>EBizAmountApi</label>
    <length>40</length>
    <type>Text</type>
</CustomField>