SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizCustomerEmailApi__c.field-meta.xml
<CustomField>
    <fullName>EBizCustomerEmailApi__c</fullName>
    <label>EBizCustomerEmailApi</label>
    <length>40</length>
    <type>Text</type>
</CustomField>