SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizCustomerNameApi__c.field-meta.xml
<CustomField>
    <fullName>EBizCustomerNameApi__c</fullName>
    <label>EBizCustomerNameApi</label>
    <length>40</length>
    <type>Text</type>
</CustomField>