SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizReceivedAmountApi__c.field-meta.xml
<CustomField>
    <fullName>EBizReceivedAmountApi__c</fullName>
    <label>EBizReceivedAmountApi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>