SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizReferenceAccountApi__c.field-meta.xml
<CustomField>
    <fullName>EBizReferenceAccountApi__c</fullName>
    <label>EBizReferenceAccountApi</label>
    <length>25</length>
    <type>Text</type>
</CustomField>