SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizReferenceContactApi__c.field-meta.xml
<CustomField>
    <fullName>EBizReferenceContactApi__c</fullName>
    <label>EBizReferenceContactApi</label>
    <length>25</length>
    <type>Text</type>
</CustomField>