SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/EBizWebFormUrlApi__c.field-meta.xml
<CustomField>
    <fullName>EBizWebFormUrlApi__c</fullName>
    <label>EBizWebFormUrlApi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>