SFQBD/Ebiz/force-app/main/default/objects/EBiz_Object_Config__c/fields/ShowMeConfigModel__c.field-meta.xml
<CustomField>
    <fullName>ShowMeConfigModel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ShowMeConfigModel</label>
    <type>Checkbox</type>
</CustomField>